# CC-M

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  spec.md
ccm/: classifier.py  compare.py  config.py  cost.py  equivalence.py  governance.py  main.py  plugins.py  pruner.py  shadow.py
tests/: test_classifier.py  test_cost.py  test_equivalence.py  test_governance.py  test_plugins.py  test_pruner.py  test_security.py
