[project]
name = "cc-m"
version = "0.1.0"
description = "Claude Model Router — route prompts to the cheapest viable Claude model"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tiktoken>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["ccm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
